--- a/.gitmodules
+++ b/.gitmodules
@@ -64,3 +64,6 @@
 [submodule "plugins/vim-gutter"]
 	path = plugins/vim-gutter
 	url = https://github.com/airblade/vim-gitgutter.git
+[submodule "plugins/vim-gnupg"]
+	path = plugins/vim-gnupg
+	url = https://github.com/jamessan/vim-gnupg.git
