--- a/.gitmodules
+++ b/.gitmodules
@@ -79,3 +79,6 @@
 [submodule "plugins/nerdtree"]
 	path = plugins/nerdtree
 	url = https://github.com/scrooloose/nerdtree.git
+[submodule "plugins/autotag.vim"]
+	path = plugins/autotag.vim
+	url = https://github.com/vim-scripts/AutoTag.git
