--- a/.gitmodules
+++ b/.gitmodules
@@ -49,9 +49,6 @@
 [submodule "plugins/ri.vim"]
 	path = plugins/ri.vim
 	url = https://github.com/danchoi/ri.vim.git
-[submodule "plugins/vim-gutter"]
-	path = plugins/vim-gutter
-	url = https://github.com/airblade/vim-gitgutter.git
 [submodule "plugins/vim-gnupg"]
 	path = plugins/vim-gnupg
 	url = https://github.com/jamessan/vim-gnupg.git
@@ -88,3 +85,6 @@
 [submodule "plugins/vim-endwise"]
 	path = plugins/vim-endwise
 	url = https://github.com/tpope/vim-endwise
+[submodule "plugins/git-gutter.vim"]
+	path = plugins/git-gutter.vim
+	url = https://github.com/akiomik/git-gutter-vim
